<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detail.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/gradientbackground">


        <androidx.cardview.widget.CardView
            android:layout_width="196dp"
            android:background="@color/black"
            android:layout_height="290dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            
            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore= "ContentDescription"
                android:src="@drawable/loadposter"/>
        </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fav_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_200"
            android:elevation="6dp"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="260dp"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/constrain2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/title"
            android:textColor="@color/gray_700"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/text_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            app:layout_constraintStart_toStartOf="@id/text_title"
            android:layout_marginTop="4dp"
            android:textColor="@color/gray_700"
            tools:text="@string/release_date"/>
        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/text_release"
            app:layout_constraintStart_toStartOf="@id/text_release"
            android:text="@string/rating" />
        <TextView
            android:id="@+id/text_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/rate"
            app:layout_constraintStart_toEndOf="@id/rate"
            tools:text="@string/rate"
            android:textStyle="bold"
            android:textColor="@color/gray_200"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rate"
            app:layout_constraintStart_toStartOf="@id/rate"
            android:layout_marginTop="12dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:textColor="@color/blue_500"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="@id/description"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            tools:text="@string/description_movie"
            android:textSize="14sp"
            android:textColor="@color/gray_700"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:layout_constraintStart_toEndOf="@id/text_rating"
            app:layout_constraintTop_toTopOf="@id/text_rating"
            app:layout_constraintBottom_toBottomOf="@id/text_rating"
            android:src="@drawable/ic_baseline_star_rate_24"
            android:layout_marginStart="4dp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>