<resources>
    <string name="app_name">MoFlix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tvshow">TvShow</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating : </string>
    <string name="rate">10/10</string>
    <string name="description">Description</string>
    <string name="description_movie">Description Movie</string>
    <string name="daftar_favorite">Daftar Favorite</string>
</resources>